Changelog
=========


1.7.4 (unreleased)
------------------

- Fix workflow updater to always update objects.
  The objects are updated even when it seems that the object was
  not update or has no longer a workflow.
  This fixes issues when updating a workflow, in which case the
  old workflow and the new workflow has the same ID.
  [jone]

- Make sure the transaction note does not get too long.
  Zope limits the transaction note length. By actively managing the transaction note
  we can provide fallbacks for when it gets too long because a lot of upgrade steps
  are installed at the same time.
  [jone]


1.7.3 (2014-04-30)
------------------

- Add ``uninstall_product`` method to upgrade step class.
  [jone]


1.7.2 (2014-02-28)
------------------

- Update provided interfaces when migrating objects to new class.
  [jone]


1.7.1 (2014-01-09)
------------------

- Fix LocationError on manage-ugprades view on cyclic dependencies.
  [jone]


1.7.0 (2013-09-24)
------------------

- Add a ``update_workflow_security`` helper function to the upgrade step.
  [jone]


1.6.0 (2013-08-30)
------------------

- Fix inplace modification bug when updating the catalog while
  iterating over a catalog result.
  [jone]

- Implement new ``importProfile`` directive for creating upgrade steps
  that just import a specific upgrade step generic setup profile.
  [jone]


1.5 (2013-08-16)
----------------

- Add a ``WorkflowChainUpdater`` for changing workflow chains without
  resetting existing objects to the initial review state of the new
  workflow.
  [jone]


1.4.0 (2013-07-18)
------------------

- Added helper for adding a type_action.
  [phgross]

- Add `objects` method to `UpgradeStep` for easy querying the catalog
  and doing stuff with progress logging combined.
  [jone]

- Make ProgressLogger an iterator too, because it is easier to use.
  [jone]

- Improve logging while installing upgrade steps.
  Show duration for installing.
  [jone]
